--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-preset-react-native": "^4.0.1",
+    "mobx-react": "^9.0.1",
+    "mobx-react-lite": "^4.0.5",
+    "mobx-utils": "^6.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -14,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-proposal-decorators": "^7.23.2",
     "@babel/plugin-proposal-private-property-in-object": "~7.21.11"
   },
   "scripts": {
