Bets modal working

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "env": {
+      "es2020": true
+    },
     "extends": [
       "react-app"
     ]
